--- a/CSS/05-OBJECTS/releases.css
+++ b/CSS/05-OBJECTS/releases.css
@@ -128,7 +128,7 @@
   gap: 30px;
 }
 .samurai-image {
-  background-image: url(../images/bg_samurai.jpg);
+  background-image: url(/images/bg_samurai.jpg);
   background-repeat: no-repeat;
   height: 500px;
   width: 100%;
